--- a/example1.ipynb
+++ b/example1.ipynb
@@ -478,6 +478,14 @@
    "source": [
     "data.drop(['Alley', 'MiscFeature', 'Fence', 'PoolQC'], axis=1,inplace = True)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Bla bla bal"
+   ]
   }
  ],
  "metadata": {
