--- a/example1.ipynb
+++ b/example1.ipynb
@@ -18,14 +18,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Matplotlib is building the font cache; this may take a moment.\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import seaborn as sns"
+    "import seaborn as sns\n",
+    "from sklearn.linear_model import LinearRegression\n",
+    "from sklearn.model_selection import train_test_split"
    ]
   },
   {
@@ -38,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -236,7 +246,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -256,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -410,7 +420,7 @@
        "6965"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -435,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -443,6 +453,7 @@
      "output_type": "stream",
      "text": [
       "LotFrontage=>17.74%\n",
+      "Alley=>93.77%\n",
       "MasVnrType=>0.55%\n",
       "MasVnrArea=>0.55%\n",
       "BsmtQual=>2.53%\n",
@@ -456,7 +467,10 @@
       "GarageYrBlt=>5.55%\n",
       "GarageFinish=>5.55%\n",
       "GarageQual=>5.55%\n",
-      "GarageCond=>5.55%\n"
+      "GarageCond=>5.55%\n",
+      "PoolQC=>99.52%\n",
+      "Fence=>80.75%\n",
+      "MiscFeature=>96.3%\n"
      ]
     }
    ],
@@ -472,12 +486,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "data.drop(['Alley', 'MiscFeature', 'Fence', 'PoolQC'], axis=1,inplace = True)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Spliting the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "x = data.iloc[:, :-1]\n",
+    "y = data.iloc[:, -1]\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, test_size=0.20 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(        Id  MSSubClass MSZoning  LotFrontage  LotArea Street LotShape  \\\n",
+       " 1172  1173         160       FV         35.0     4017   Pave      IR1   \n",
+       " 407    408          70       RL         63.0    15576   Pave      Reg   \n",
+       " 615    616          85       RL         80.0     8800   Pave      Reg   \n",
+       " 1247  1248          80       RL          NaN    12328   Pave      IR1   \n",
+       " 1399  1400          50       RL         51.0     6171   Pave      Reg   \n",
+       " ...    ...         ...      ...          ...      ...    ...      ...   \n",
+       " 79      80          50       RM         60.0    10440   Pave      Reg   \n",
+       " 799    800          50       RL         60.0     7200   Pave      Reg   \n",
+       " 493    494          20       RL         70.0     7931   Pave      Reg   \n",
+       " 149    150          50       RM          NaN     6240   Pave      Reg   \n",
+       " 1190  1191         190       RL          NaN    32463   Pave      Reg   \n",
+       " \n",
+       "      LandContour Utilities LotConfig  ... OpenPorchSF EnclosedPorch 3SsnPorch  \\\n",
+       " 1172         Lvl    AllPub    Inside  ...          54             0         0   \n",
+       " 407          Lvl    AllPub    Inside  ...           0           160         0   \n",
+       " 615          Lvl    AllPub    Inside  ...           0             0         0   \n",
+       " 1247         Lvl    AllPub    Inside  ...           0             0         0   \n",
+       " 1399         Lvl    AllPub    Inside  ...          16             0         0   \n",
+       " ...          ...       ...       ...  ...         ...           ...       ...   \n",
+       " 79           Lvl    AllPub    Corner  ...           0           128         0   \n",
+       " 799          Lvl    AllPub    Corner  ...           0           264         0   \n",
+       " 493          Lvl    AllPub    Inside  ...           0             0         0   \n",
+       " 149          Lvl    AllPub    Inside  ...         114             0         0   \n",
+       " 1190         Low    AllPub    Inside  ...           0             0         0   \n",
+       " \n",
+       "      ScreenPorch PoolArea MiscVal  MoSold  YrSold  SaleType  SaleCondition  \n",
+       " 1172           0        0       0       3    2008        WD         Normal  \n",
+       " 407            0        0       0       3    2008        WD         Normal  \n",
+       " 615            0        0       0       5    2010        WD        Abnorml  \n",
+       " 1247           0        0       0       5    2010        WD         Normal  \n",
+       " 1399           0        0       0      10    2009        WD         Normal  \n",
+       " ...          ...      ...     ...     ...     ...       ...            ...  \n",
+       " 79             0        0       0       5    2009        WD         Normal  \n",
+       " 799            0        0       0       6    2007        WD         Normal  \n",
+       " 493            0        0       0       6    2008        WD         Normal  \n",
+       " 149            0        0       0       4    2006        WD         Normal  \n",
+       " 1190           0        0       0       3    2007        WD         Normal  \n",
+       " \n",
+       " [1168 rows x 76 columns],\n",
+       " 1172    171900\n",
+       " 407     177000\n",
+       " 615     137500\n",
+       " 1247    169900\n",
+       " 1399    137450\n",
+       "          ...  \n",
+       " 79      110000\n",
+       " 799     175000\n",
+       " 493     155000\n",
+       " 149     115000\n",
+       " 1190    168000\n",
+       " Name: SalePrice, Length: 1168, dtype: int64)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
