Splitting object and numerical dataset

--- a/example1.ipynb
+++ b/example1.ipynb
@@ -16,17 +16,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Matplotlib is building the font cache; this may take a moment.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
@@ -45,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -243,7 +235,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -262,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -372,15 +364,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# 2 Data preparation"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -414,14 +399,12 @@
        "6965"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "category_df = data.select_dtypes(include=['object'])\n",
-    "number_df = data.select_dtypes(exclude=['object'])\n",
     "\n",
     "def missing_cols(df):\n",
     "    total = 0 \n",
@@ -439,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -479,8 +462,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 2 Data preparation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Removing categories with more than 80% of data missing**"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,10 +486,55 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This was done in Jupiter "
+    "**Stliting the object columns and numerical conlums"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "object_columns_df = data.select_dtypes(include=['object'])\n",
+    "numerical_columns_df =data.select_dtypes(exclude=['object'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MasVnrType=>8\n",
+      "BsmtQual=>37\n",
+      "BsmtCond=>37\n",
+      "BsmtExposure=>38\n",
+      "BsmtFinType1=>37\n",
+      "BsmtFinType2=>38\n",
+      "Electrical=>1\n",
+      "FireplaceQu=>690\n",
+      "GarageType=>81\n",
+      "GarageFinish=>81\n",
+      "GarageQual=>81\n",
+      "GarageCond=>81\n"
+     ]
+    }
+   ],
+   "source": [
+    "def category_nulls(df):\n",
+    "    for col in df.columns:\n",
+    "        null_counts = df[col].isnull().sum()\n",
+    "        if(null_counts!=0):\n",
+    "            print(f\"{col}=>{null_counts}\")\n",
+    "        \n",
+    "category_nulls(object_columns_df)   "
    ]
   }
  ],
