--- a/example1.ipynb
+++ b/example1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "6965"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,9 +495,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MSZoning         object\n",
+       "Street           object\n",
+       "LotShape         object\n",
+       "LandContour      object\n",
+       "Utilities        object\n",
+       "LotConfig        object\n",
+       "LandSlope        object\n",
+       "Neighborhood     object\n",
+       "Condition1       object\n",
+       "Condition2       object\n",
+       "BldgType         object\n",
+       "HouseStyle       object\n",
+       "RoofStyle        object\n",
+       "RoofMatl         object\n",
+       "Exterior1st      object\n",
+       "Exterior2nd      object\n",
+       "MasVnrType       object\n",
+       "ExterQual        object\n",
+       "ExterCond        object\n",
+       "Foundation       object\n",
+       "BsmtQual         object\n",
+       "BsmtCond         object\n",
+       "BsmtExposure     object\n",
+       "BsmtFinType1     object\n",
+       "BsmtFinType2     object\n",
+       "Heating          object\n",
+       "HeatingQC        object\n",
+       "CentralAir       object\n",
+       "Electrical       object\n",
+       "KitchenQual      object\n",
+       "Functional       object\n",
+       "FireplaceQu      object\n",
+       "GarageType       object\n",
+       "GarageFinish     object\n",
+       "GarageQual       object\n",
+       "GarageCond       object\n",
+       "PavedDrive       object\n",
+       "SaleType         object\n",
+       "SaleCondition    object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "object_columns_df = data.select_dtypes(include=['object'])\n",
     "numerical_columns_df =data.select_dtypes(exclude=['object'])"
@@ -505,7 +555,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -536,6 +586,258 @@
     "        \n",
     "category_nulls(object_columns_df)   "
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Cleaning objects columns"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Adding None to columns with a high count on none feature"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "collumn_Nulls = ['BsmtQual','BsmtCond','BsmtExposure','BsmtFinType1','BsmtFinType2','GarageType','GarageFinish','GarageQual','FireplaceQu','GarageCond']\n",
+    "\n",
+    "object_columns_df[collumn_Nulls] = object_columns_df[collumn_Nulls].fillna('NA')\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "using mode variable in columns to fill in missing data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "columns_with_lowNA = ['MSZoning','Utilities','Exterior1st','Exterior2nd','MasVnrType','Electrical','KitchenQual','Functional','SaleType']\n",
+    "\n",
+    "object_columns_df[columns_with_lowNA] = object_columns_df[columns_with_lowNA].fillna(object_columns_df.mode().iloc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1460 entries, 0 to 1459\n",
+      "Data columns (total 39 columns):\n",
+      " #   Column         Non-Null Count  Dtype \n",
+      "---  ------         --------------  ----- \n",
+      " 0   MSZoning       1460 non-null   object\n",
+      " 1   Street         1460 non-null   object\n",
+      " 2   LotShape       1460 non-null   object\n",
+      " 3   LandContour    1460 non-null   object\n",
+      " 4   Utilities      1460 non-null   object\n",
+      " 5   LotConfig      1460 non-null   object\n",
+      " 6   LandSlope      1460 non-null   object\n",
+      " 7   Neighborhood   1460 non-null   object\n",
+      " 8   Condition1     1460 non-null   object\n",
+      " 9   Condition2     1460 non-null   object\n",
+      " 10  BldgType       1460 non-null   object\n",
+      " 11  HouseStyle     1460 non-null   object\n",
+      " 12  RoofStyle      1460 non-null   object\n",
+      " 13  RoofMatl       1460 non-null   object\n",
+      " 14  Exterior1st    1460 non-null   object\n",
+      " 15  Exterior2nd    1460 non-null   object\n",
+      " 16  MasVnrType     1460 non-null   object\n",
+      " 17  ExterQual      1460 non-null   object\n",
+      " 18  ExterCond      1460 non-null   object\n",
+      " 19  Foundation     1460 non-null   object\n",
+      " 20  BsmtQual       1460 non-null   object\n",
+      " 21  BsmtCond       1460 non-null   object\n",
+      " 22  BsmtExposure   1460 non-null   object\n",
+      " 23  BsmtFinType1   1460 non-null   object\n",
+      " 24  BsmtFinType2   1460 non-null   object\n",
+      " 25  Heating        1460 non-null   object\n",
+      " 26  HeatingQC      1460 non-null   object\n",
+      " 27  CentralAir     1460 non-null   object\n",
+      " 28  Electrical     1460 non-null   object\n",
+      " 29  KitchenQual    1460 non-null   object\n",
+      " 30  Functional     1460 non-null   object\n",
+      " 31  FireplaceQu    1460 non-null   object\n",
+      " 32  GarageType     1460 non-null   object\n",
+      " 33  GarageFinish   1460 non-null   object\n",
+      " 34  GarageQual     1460 non-null   object\n",
+      " 35  GarageCond     1460 non-null   object\n",
+      " 36  PavedDrive     1460 non-null   object\n",
+      " 37  SaleType       1460 non-null   object\n",
+      " 38  SaleCondition  1460 non-null   object\n",
+      "dtypes: object(39)\n",
+      "memory usage: 445.0+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "object_columns_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1460 entries, 0 to 1459\n",
+      "Data columns (total 38 columns):\n",
+      " #   Column         Non-Null Count  Dtype  \n",
+      "---  ------         --------------  -----  \n",
+      " 0   Id             1460 non-null   int64  \n",
+      " 1   MSSubClass     1460 non-null   int64  \n",
+      " 2   LotFrontage    1201 non-null   float64\n",
+      " 3   LotArea        1460 non-null   int64  \n",
+      " 4   OverallQual    1460 non-null   int64  \n",
+      " 5   OverallCond    1460 non-null   int64  \n",
+      " 6   YearBuilt      1460 non-null   int64  \n",
+      " 7   YearRemodAdd   1460 non-null   int64  \n",
+      " 8   MasVnrArea     1452 non-null   float64\n",
+      " 9   BsmtFinSF1     1460 non-null   int64  \n",
+      " 10  BsmtFinSF2     1460 non-null   int64  \n",
+      " 11  BsmtUnfSF      1460 non-null   int64  \n",
+      " 12  TotalBsmtSF    1460 non-null   int64  \n",
+      " 13  1stFlrSF       1460 non-null   int64  \n",
+      " 14  2ndFlrSF       1460 non-null   int64  \n",
+      " 15  LowQualFinSF   1460 non-null   int64  \n",
+      " 16  GrLivArea      1460 non-null   int64  \n",
+      " 17  BsmtFullBath   1460 non-null   int64  \n",
+      " 18  BsmtHalfBath   1460 non-null   int64  \n",
+      " 19  FullBath       1460 non-null   int64  \n",
+      " 20  HalfBath       1460 non-null   int64  \n",
+      " 21  BedroomAbvGr   1460 non-null   int64  \n",
+      " 22  KitchenAbvGr   1460 non-null   int64  \n",
+      " 23  TotRmsAbvGrd   1460 non-null   int64  \n",
+      " 24  Fireplaces     1460 non-null   int64  \n",
+      " 25  GarageYrBlt    1379 non-null   float64\n",
+      " 26  GarageCars     1460 non-null   int64  \n",
+      " 27  GarageArea     1460 non-null   int64  \n",
+      " 28  WoodDeckSF     1460 non-null   int64  \n",
+      " 29  OpenPorchSF    1460 non-null   int64  \n",
+      " 30  EnclosedPorch  1460 non-null   int64  \n",
+      " 31  3SsnPorch      1460 non-null   int64  \n",
+      " 32  ScreenPorch    1460 non-null   int64  \n",
+      " 33  PoolArea       1460 non-null   int64  \n",
+      " 34  MiscVal        1460 non-null   int64  \n",
+      " 35  MoSold         1460 non-null   int64  \n",
+      " 36  YrSold         1460 non-null   int64  \n",
+      " 37  SalePrice      1460 non-null   int64  \n",
+      "dtypes: float64(3), int64(35)\n",
+      "memory usage: 433.6 KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "numerical_columns_df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of null values in each column:\n",
+      "Id                 0\n",
+      "MSSubClass         0\n",
+      "LotFrontage      259\n",
+      "LotArea            0\n",
+      "OverallQual        0\n",
+      "OverallCond        0\n",
+      "YearBuilt          0\n",
+      "YearRemodAdd       0\n",
+      "MasVnrArea         8\n",
+      "BsmtFinSF1         0\n",
+      "BsmtFinSF2         0\n",
+      "BsmtUnfSF          0\n",
+      "TotalBsmtSF        0\n",
+      "1stFlrSF           0\n",
+      "2ndFlrSF           0\n",
+      "LowQualFinSF       0\n",
+      "GrLivArea          0\n",
+      "BsmtFullBath       0\n",
+      "BsmtHalfBath       0\n",
+      "FullBath           0\n",
+      "HalfBath           0\n",
+      "BedroomAbvGr       0\n",
+      "KitchenAbvGr       0\n",
+      "TotRmsAbvGrd       0\n",
+      "Fireplaces         0\n",
+      "GarageYrBlt       81\n",
+      "GarageCars         0\n",
+      "GarageArea         0\n",
+      "WoodDeckSF         0\n",
+      "OpenPorchSF        0\n",
+      "EnclosedPorch      0\n",
+      "3SsnPorch          0\n",
+      "ScreenPorch        0\n",
+      "PoolArea           0\n",
+      "MiscVal            0\n",
+      "MoSold             0\n",
+      "YrSold             0\n",
+      "SalePrice          0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "numeric_nulls = numerical_columns_df.isnull().sum()\n",
+    "print(\"Number of null values in each column:\\n{}\".format(numeric_nulls))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "35.0\n",
+      "69.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print((numerical_columns_df['YrSold']-numerical_columns_df['YearBuilt']).median())\n",
+    "print(numerical_columns_df[\"LotFrontage\"].median())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
