--- a/example1.ipynb
+++ b/example1.ipynb
@@ -536,6 +536,21 @@
     "        \n",
     "category_nulls(object_columns_df)   "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "x = data.iloc[:, :-1]\n",
+    "y = data.iloc[:, -1]\n",
+    " \n",
+    "# spliting the dataset\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    x, y, test_size=0.20)"
+   ]
   }
  ],
  "metadata": {
