Filling Numerical Data

--- a/example1.ipynb
+++ b/example1.ipynb
@@ -588,8 +588,6 @@
    ]
   },
   {
-<<<<<<< HEAD
-=======
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -835,24 +833,14 @@
    ]
   },
   {
->>>>>>> 9f8ddc0e0948376c05f731021319c54c4594b594
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-<<<<<<< HEAD
    "source": [
-    "\n",
-    "x = data.iloc[:, :-1]\n",
-    "y = data.iloc[:, -1]\n",
-    " \n",
-    "# spliting the dataset\n",
-    "x_train, x_test, y_train, y_test = train_test_split(\n",
-    "    x, y, test_size=0.20)"
+    "numerical_columns_df['GarageYrBlt'] = numerical_columns_df['GarageYrBlt'].fillna(numerical_columns_df['YrSold']-35)\n",
+    "numerical_columns_df['LotFrontage'] = numerical_columns_df['LotFrontage'].fillna(68)"
    ]
-=======
-   "source": []
->>>>>>> 9f8ddc0e0948376c05f731021319c54c4594b594
   }
  ],
  "metadata": {
