--- a/example1.ipynb
+++ b/example1.ipynb
@@ -841,6 +841,29 @@
     "numerical_columns_df['GarageYrBlt'] = numerical_columns_df['GarageYrBlt'].fillna(numerical_columns_df['YrSold']-35)\n",
     "numerical_columns_df['LotFrontage'] = numerical_columns_df['LotFrontage'].fillna(68)"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Spliting data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# get the locations\n",
+    "x = data.iloc[:, :-1]\n",
+    "y = data.iloc[:, -1]\n",
+    " \n",
+    "# split the dataset\n",
+    "x_train, x_test, y_train, y_test = train_test_split(\n",
+    "    x, y, test_size=0.20 )"
+   ]
   }
  ],
  "metadata": {
