Updates to cleaning

--- a/example1.ipynb
+++ b/example1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -235,7 +235,7 @@
        "[5 rows x 81 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -254,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -365,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -399,7 +399,7 @@
        "6965"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -478,7 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,59 +495,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "MSZoning         object\n",
-       "Street           object\n",
-       "LotShape         object\n",
-       "LandContour      object\n",
-       "Utilities        object\n",
-       "LotConfig        object\n",
-       "LandSlope        object\n",
-       "Neighborhood     object\n",
-       "Condition1       object\n",
-       "Condition2       object\n",
-       "BldgType         object\n",
-       "HouseStyle       object\n",
-       "RoofStyle        object\n",
-       "RoofMatl         object\n",
-       "Exterior1st      object\n",
-       "Exterior2nd      object\n",
-       "MasVnrType       object\n",
-       "ExterQual        object\n",
-       "ExterCond        object\n",
-       "Foundation       object\n",
-       "BsmtQual         object\n",
-       "BsmtCond         object\n",
-       "BsmtExposure     object\n",
-       "BsmtFinType1     object\n",
-       "BsmtFinType2     object\n",
-       "Heating          object\n",
-       "HeatingQC        object\n",
-       "CentralAir       object\n",
-       "Electrical       object\n",
-       "KitchenQual      object\n",
-       "Functional       object\n",
-       "FireplaceQu      object\n",
-       "GarageType       object\n",
-       "GarageFinish     object\n",
-       "GarageQual       object\n",
-       "GarageCond       object\n",
-       "PavedDrive       object\n",
-       "SaleType         object\n",
-       "SaleCondition    object\n",
-       "dtype: object"
-      ]
-     },
-     "execution_count": 41,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "object_columns_df = data.select_dtypes(include=['object'])\n",
     "numerical_columns_df =data.select_dtypes(exclude=['object'])"
@@ -555,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -697,7 +647,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -711,13 +661,13 @@
       "---  ------         --------------  -----  \n",
       " 0   Id             1460 non-null   int64  \n",
       " 1   MSSubClass     1460 non-null   int64  \n",
-      " 2   LotFrontage    1201 non-null   float64\n",
+      " 2   LotFrontage    1460 non-null   float64\n",
       " 3   LotArea        1460 non-null   int64  \n",
       " 4   OverallQual    1460 non-null   int64  \n",
       " 5   OverallCond    1460 non-null   int64  \n",
       " 6   YearBuilt      1460 non-null   int64  \n",
       " 7   YearRemodAdd   1460 non-null   int64  \n",
-      " 8   MasVnrArea     1452 non-null   float64\n",
+      " 8   MasVnrArea     1460 non-null   float64\n",
       " 9   BsmtFinSF1     1460 non-null   int64  \n",
       " 10  BsmtFinSF2     1460 non-null   int64  \n",
       " 11  BsmtUnfSF      1460 non-null   int64  \n",
@@ -734,7 +684,7 @@
       " 22  KitchenAbvGr   1460 non-null   int64  \n",
       " 23  TotRmsAbvGrd   1460 non-null   int64  \n",
       " 24  Fireplaces     1460 non-null   int64  \n",
-      " 25  GarageYrBlt    1379 non-null   float64\n",
+      " 25  GarageYrBlt    1460 non-null   float64\n",
       " 26  GarageCars     1460 non-null   int64  \n",
       " 27  GarageArea     1460 non-null   int64  \n",
       " 28  WoodDeckSF     1460 non-null   int64  \n",
@@ -758,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -766,44 +716,44 @@
      "output_type": "stream",
      "text": [
       "Number of null values in each column:\n",
-      "Id                 0\n",
-      "MSSubClass         0\n",
-      "LotFrontage      259\n",
-      "LotArea            0\n",
-      "OverallQual        0\n",
-      "OverallCond        0\n",
-      "YearBuilt          0\n",
-      "YearRemodAdd       0\n",
-      "MasVnrArea         8\n",
-      "BsmtFinSF1         0\n",
-      "BsmtFinSF2         0\n",
-      "BsmtUnfSF          0\n",
-      "TotalBsmtSF        0\n",
-      "1stFlrSF           0\n",
-      "2ndFlrSF           0\n",
-      "LowQualFinSF       0\n",
-      "GrLivArea          0\n",
-      "BsmtFullBath       0\n",
-      "BsmtHalfBath       0\n",
-      "FullBath           0\n",
-      "HalfBath           0\n",
-      "BedroomAbvGr       0\n",
-      "KitchenAbvGr       0\n",
-      "TotRmsAbvGrd       0\n",
-      "Fireplaces         0\n",
-      "GarageYrBlt       81\n",
-      "GarageCars         0\n",
-      "GarageArea         0\n",
-      "WoodDeckSF         0\n",
-      "OpenPorchSF        0\n",
-      "EnclosedPorch      0\n",
-      "3SsnPorch          0\n",
-      "ScreenPorch        0\n",
-      "PoolArea           0\n",
-      "MiscVal            0\n",
-      "MoSold             0\n",
-      "YrSold             0\n",
-      "SalePrice          0\n",
+      "Id               0\n",
+      "MSSubClass       0\n",
+      "LotFrontage      0\n",
+      "LotArea          0\n",
+      "OverallQual      0\n",
+      "OverallCond      0\n",
+      "YearBuilt        0\n",
+      "YearRemodAdd     0\n",
+      "MasVnrArea       0\n",
+      "BsmtFinSF1       0\n",
+      "BsmtFinSF2       0\n",
+      "BsmtUnfSF        0\n",
+      "TotalBsmtSF      0\n",
+      "1stFlrSF         0\n",
+      "2ndFlrSF         0\n",
+      "LowQualFinSF     0\n",
+      "GrLivArea        0\n",
+      "BsmtFullBath     0\n",
+      "BsmtHalfBath     0\n",
+      "FullBath         0\n",
+      "HalfBath         0\n",
+      "BedroomAbvGr     0\n",
+      "KitchenAbvGr     0\n",
+      "TotRmsAbvGrd     0\n",
+      "Fireplaces       0\n",
+      "GarageYrBlt      0\n",
+      "GarageCars       0\n",
+      "GarageArea       0\n",
+      "WoodDeckSF       0\n",
+      "OpenPorchSF      0\n",
+      "EnclosedPorch    0\n",
+      "3SsnPorch        0\n",
+      "ScreenPorch      0\n",
+      "PoolArea         0\n",
+      "MiscVal          0\n",
+      "MoSold           0\n",
+      "YrSold           0\n",
+      "SalePrice        0\n",
       "dtype: int64\n"
      ]
     }
@@ -815,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -823,7 +773,7 @@
      "output_type": "stream",
      "text": [
       "35.0\n",
-      "69.0\n"
+      "68.0\n"
      ]
     }
    ],
@@ -834,12 +784,173 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "numerical_columns_df['GarageYrBlt'] = numerical_columns_df['GarageYrBlt'].fillna(numerical_columns_df['YrSold']-35)\n",
     "numerical_columns_df['LotFrontage'] = numerical_columns_df['LotFrontage'].fillna(68)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# fill coloums with zero\n",
+    "numerical_columns_df= numerical_columns_df.fillna(0)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'Utilities'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3802\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3801\u001b[0m \u001b[39mtry\u001b[39;00m:\n\u001b[1;32m-> 3802\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49m_engine\u001b[39m.\u001b[39;49mget_loc(casted_key)\n\u001b[0;32m   3803\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n",
+      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\lib\\site-packages\\pandas\\_libs\\index.pyx:138\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\lib\\site-packages\\pandas\\_libs\\index.pyx:165\u001b[0m, in \u001b[0;36mpandas._libs.index.IndexEngine.get_loc\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5745\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "File \u001b[1;32mpandas\\_libs\\hashtable_class_helper.pxi:5753\u001b[0m, in \u001b[0;36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[1;34m()\u001b[0m\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Utilities'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[60], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[39m# data found low variance so it was deleted\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m object_columns_df[\u001b[39m'\u001b[39;49m\u001b[39mUtilities\u001b[39;49m\u001b[39m'\u001b[39;49m]\u001b[39m.\u001b[39mvalue_counts()\u001b[39m.\u001b[39mplot(kind\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mbar\u001b[39m\u001b[39m'\u001b[39m,figsize\u001b[39m=\u001b[39m[\u001b[39m10\u001b[39m,\u001b[39m3\u001b[39m])\n\u001b[0;32m      3\u001b[0m object_columns_df[\u001b[39m'\u001b[39m\u001b[39mUtilities\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mvalue_counts() \n\u001b[0;32m      5\u001b[0m object_columns_df[\u001b[39m'\u001b[39m\u001b[39mStreet\u001b[39m\u001b[39m'\u001b[39m]\u001b[39m.\u001b[39mvalue_counts()\u001b[39m.\u001b[39mplot(kind\u001b[39m=\u001b[39m\u001b[39m'\u001b[39m\u001b[39mbar\u001b[39m\u001b[39m'\u001b[39m,figsize\u001b[39m=\u001b[39m[\u001b[39m10\u001b[39m,\u001b[39m3\u001b[39m])\n",
+      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\lib\\site-packages\\pandas\\core\\frame.py:3807\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3805\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mcolumns\u001b[39m.\u001b[39mnlevels \u001b[39m>\u001b[39m \u001b[39m1\u001b[39m:\n\u001b[0;32m   3806\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 3807\u001b[0m indexer \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mcolumns\u001b[39m.\u001b[39;49mget_loc(key)\n\u001b[0;32m   3808\u001b[0m \u001b[39mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   3809\u001b[0m     indexer \u001b[39m=\u001b[39m [indexer]\n",
+      "File \u001b[1;32mc:\\ProgramData\\anaconda3\\lib\\site-packages\\pandas\\core\\indexes\\base.py:3804\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key, method, tolerance)\u001b[0m\n\u001b[0;32m   3802\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_engine\u001b[39m.\u001b[39mget_loc(casted_key)\n\u001b[0;32m   3803\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m \u001b[39mas\u001b[39;00m err:\n\u001b[1;32m-> 3804\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39merr\u001b[39;00m\n\u001b[0;32m   3805\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[0;32m   3806\u001b[0m     \u001b[39m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3807\u001b[0m     \u001b[39m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3808\u001b[0m     \u001b[39m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3809\u001b[0m     \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_check_indexing_error(key)\n",
+      "\u001b[1;31mKeyError\u001b[0m: 'Utilities'"
+     ]
+    }
+   ],
+   "source": [
+    "# data found low variance so it was deleted\n",
+    "object_columns_df['Utilities'].value_counts().plot(kind='bar',figsize=[10,3])\n",
+    "object_columns_df['Utilities'].value_counts() \n",
+    "\n",
+    "object_columns_df['Street'].value_counts().plot(kind='bar',figsize=[10,3])\n",
+    "object_columns_df['Street'].value_counts() \n",
+    "\n",
+    "object_columns_df['Condition2'].value_counts().plot(kind='bar',figsize=[10,3])\n",
+    "object_columns_df['Condition2'].value_counts() \n",
+    "\n",
+    "object_columns_df['RoofMatl'].value_counts().plot(kind='bar',figsize=[10,3])\n",
+    "object_columns_df['RoofMatl'].value_counts() \n",
+    "\n",
+    "object_columns_df['Heating'].value_counts().plot(kind='bar',figsize=[10,3])\n",
+    "object_columns_df['Heating'].value_counts()\n",
+    "\n",
+    "object_columns_df = object_columns_df.drop(['Heating','RoofMatl','Condition2','Street','Utilities'],axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "count    1460.000000\n",
+       "mean       36.547945\n",
+       "std        30.250152\n",
+       "min         0.000000\n",
+       "25%         8.000000\n",
+       "50%        35.000000\n",
+       "75%        54.000000\n",
+       "max       136.000000\n",
+       "Name: Age_House, dtype: float64"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#creating new features\n",
+    "\n",
+    "numerical_columns_df['Age_House']= (numerical_columns_df['YrSold']-numerical_columns_df['YearBuilt'])\n",
+    "numerical_columns_df['Age_House'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Id</th>\n",
+       "      <th>MSSubClass</th>\n",
+       "      <th>LotFrontage</th>\n",
+       "      <th>LotArea</th>\n",
+       "      <th>OverallQual</th>\n",
+       "      <th>OverallCond</th>\n",
+       "      <th>YearBuilt</th>\n",
+       "      <th>YearRemodAdd</th>\n",
+       "      <th>MasVnrArea</th>\n",
+       "      <th>BsmtFinSF1</th>\n",
+       "      <th>...</th>\n",
+       "      <th>OpenPorchSF</th>\n",
+       "      <th>EnclosedPorch</th>\n",
+       "      <th>3SsnPorch</th>\n",
+       "      <th>ScreenPorch</th>\n",
+       "      <th>PoolArea</th>\n",
+       "      <th>MiscVal</th>\n",
+       "      <th>MoSold</th>\n",
+       "      <th>YrSold</th>\n",
+       "      <th>SalePrice</th>\n",
+       "      <th>Age_House</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>0 rows × 39 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [Id, MSSubClass, LotFrontage, LotArea, OverallQual, OverallCond, YearBuilt, YearRemodAdd, MasVnrArea, BsmtFinSF1, BsmtFinSF2, BsmtUnfSF, TotalBsmtSF, 1stFlrSF, 2ndFlrSF, LowQualFinSF, GrLivArea, BsmtFullBath, BsmtHalfBath, FullBath, HalfBath, BedroomAbvGr, KitchenAbvGr, TotRmsAbvGrd, Fireplaces, GarageYrBlt, GarageCars, GarageArea, WoodDeckSF, OpenPorchSF, EnclosedPorch, 3SsnPorch, ScreenPorch, PoolArea, MiscVal, MoSold, YrSold, SalePrice, Age_House]\n",
+       "Index: []\n",
+       "\n",
+       "[0 rows x 39 columns]"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Negatif = numerical_columns_df[numerical_columns_df['Age_House'] < 0]\n",
+    "Negatif"
    ]
   },
   {
@@ -852,7 +963,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
